--- a/MortgageExamples.ipynb
+++ b/MortgageExamples.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "* Almost every mortgage today allows you to pay additionally towards your loan whenever you wish.\n",
-    "* If you pay extra every month the loan **will** be paid of quicker.\n",
+    "* If you pay extra every month the loan **will** be paid off quicker.\n",
     "* How much quicker though?\n",
     "* Also the total amount you pay will be lower if you make that additional payment amount every month.\n",
     "* How much cheaper will it be?"
@@ -226,7 +226,7 @@
     "$$-\\ln\\left(\\frac{A}{P}(1-\\gamma)+1\\right)\\cdot \\frac{1}{\\ln(\\gamma)}= N$$\n",
     "\n",
     "Of course we cannot do a fractional payment, per se.  So the actual number of payments $\\widehat{N}$ is:\n",
-    "$$\\widehat{N} = \\hbox{ceil}(N)$$\n",
+    "$$\\widehat{N} = \\mbox{ceil}(N)$$\n",
     "in other words round up the floating number $N$.  The only question is the last payment, how much will it be.  We can find that, and the total amount by:\n",
     "\n",
     "1. The amount spent up to the last payment is $P\\cdot(\\widehat{N}-1)$.\n",
