Rendering Jupyter on github Apparently math stuff will not render \mbox or \hbox, remvoing those.

--- a/MortgageExamples.ipynb
+++ b/MortgageExamples.ipynb
@@ -226,7 +226,7 @@
     "$$-\\ln\\left(\\frac{A}{P}(1-\\gamma)+1\\right)\\cdot \\frac{1}{\\ln(\\gamma)}= N$$\n",
     "\n",
     "Of course we cannot do a fractional payment, per se.  So the actual number of payments $\\widehat{N}$ is:\n",
-    "$$\\widehat{N} = \\mbox{ceil}(N)$$\n",
+    "$$\\widehat{N} = ceil(N)$$\n",
     "in other words round up the floating number $N$.  The only question is the last payment, how much will it be.  We can find that, and the total amount by:\n",
     "\n",
     "1. The amount spent up to the last payment is $P\\cdot(\\widehat{N}-1)$.\n",
